fixed background-position on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -2743,7 +2743,7 @@ height: 13px;
     width: 80vw;
 /*     height: 14vh; */
         height: 12vh;
-    margin-top: 20px;
+    margin-top: 10px;
     margin-right: 30px;
     margin-left: 30px;
     /* margin-bottom: 30px; */
